# ai-discord-bot

./: README.md  pyproject.toml
config/: data.json  requirements.txt
luna/: __init__.py  main.py
luna/cogs/: AI.py  Admin.py
luna/config/: data.json
luna/src/: main.py
src/: Dockerfile  __init__.py  main.py
src/cogs/: AI.py  Admin.py  Games.py  Voice.py  __init__.py
src/config/: data.json
