[tool.poetry]
name = "luna"
version = "0.1.0"
description = ""
authors = ["EnigmA03C <sdangelo989@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
discord-py = {extras = ["voice"], version = "^2.4.0"}
discord-ext-voice-recv = "^0.4.2a145"
openai-whisper = {git = "https://github.com/openai/whisper.git"}
tts = "^0.22.0"
transformers = "^4.44.2"
torch
torchvision
torchaudio


[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu124"
default = false
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
